# NTDScope-Data-Web-Interface

./: LICENSE  README.md  app.py  pyproject.toml
