[tool.poetry]
name = "repl-nix-ntdscope-data-web-interface"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_ntdscope_data_web_interface"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
boto3 = "^1.34.56"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
